--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,10 @@ Generated\ Files/
 TestResult.xml
 nunit-*.xml
 
+# Verify
+*.received.*
+*.received/
+
 # Build Results of an ATL Project
 [Dd]ebugPS/
 [Rr]eleasePS/
