--- a/test/Ravitor.Test.Integration/Ravitor.Test.Integration.csproj
+++ b/test/Ravitor.Test.Integration/Ravitor.Test.Integration.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <OutputType>Exe</OutputType>
+    <!--<DisableRavitorInterceptor>true</DisableRavitorInterceptor>-->
   </PropertyGroup>
 
   <ItemGroup>
