--- a/src/Ravitor.Extensions.DependencyInjection/Ravitor.Extensions.DependencyInjection.csproj
+++ b/src/Ravitor.Extensions.DependencyInjection/Ravitor.Extensions.DependencyInjection.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net8.0;net9.0</TargetFrameworks>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
