--- a/GitVersion.yaml
+++ b/GitVersion.yaml
@@ -1,2 +1,8 @@
 workflow: GitHubFlow/v1
-next-version: 1.0.0
+branches:
+  main:
+    label: beta
+    increment: Patch
+  feature:
+    label: alpha
+    increment: Minor
