--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -6,10 +6,10 @@ on:
     branches:
     - main
     tags:
-    - v*
+    - v[0-9]+.[0-9]+.[0-9]+  # Only matches vX.X.X where X is a number
     paths:
-    - ./src/**
-    - ./test/**
+    - src/**
+    - test/**
 jobs:
   pipeline:
     uses: Raven-Tail/Blackwing/.github/workflows/_.yaml@main
