Refactor ci/cd pipeline scripts

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -17,6 +17,7 @@
     <UseArtifactsOutput>true</UseArtifactsOutput>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <IsPackable>false</IsPackable>
+    <DisableGitVersionTask Condition="'$(IsPackable)' == 'false'">false</DisableGitVersionTask>
   </PropertyGroup>
 
   <!-- Repository -->
